# rust-web-server

./: Cargo.toml  README.md
examples/: do_requests.rs
public/: robot.txt
src/: ctx.rs  error.rs  logs.rs  main.rs  model.rs
src/mw/: auth.rs  mod.rs  response_mapper.rs
src/web/: mod.rs  routes_hello.rs  routes_login.rs  routes_todos.rs
