[package]
name = "rust-web-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
axum = "0.6"
lazy-regex = "3.0.1"
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
serde_with = "3.3.0"
strum_macros = "0.25.2"
tokio = { version = "1", features = ["full"] }
tower-cookies = "0.9.0"
tower = { version = "0.4", features = ["timeout"] }
tower-http = { version = "0.4.3", features = ["fs", "trace"] }
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.5"
